force-app/main/default/objects/Attribute__c/Attribute__c.object-meta.xml
<CustomObject>
    <description>Attribute defines an attribute and includes a type definition (e.g. Picklist, Yes/No, Text, Multiple Choice, etc.), description, and other default values. Attributes are related to a Service Attribute and a Project Service Attribute.</description>
    <label>Attribute</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>