force-app/main/default/objects/Attribute__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A checkbox that indicates whether this Attribute is active (this field must not be selected if the attribute is to be deleted or turned off).</description>
    <inlineHelpText>Select this box if the attribute active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>