force-app/main/default/objects/Attribute__c/fields/AttributeMaxLength__c.field-meta.xml
<CustomField>
    <fullName>AttributeMaxLength__c</fullName>
    <description>A value that indicates the maximum length of the Attribute.</description>
    <label>Attribute Max Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>