force-app/main/default/objects/Attribute__c/fields/AttributeTitle__c.field-meta.xml
<CustomField>
    <fullName>AttributeTitle__c</fullName>
    <description>An entry field for the title of the Attribute.</description>
    <inlineHelpText>Enter the title of the attribute.</inlineHelpText>
    <label>Attribute Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>