force-app/main/default/objects/Attribute__c/fields/AttributeType__c.field-meta.xml
<CustomField>
    <fullName>AttributeType__c</fullName>
    <description>A picklist with that determines the type of Attribute.</description>
    <inlineHelpText>Choose the type of attribute.</inlineHelpText>
    <label>AttributeType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Yes/No</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Single-Select List</fullName>
            </value>
            <value>
                <fullName>Multi-Select List</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>