force-app/main/default/objects/Attribute__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An entry field for the description of this Attribute.</description>
    <inlineHelpText>Enter a description of this attribute.</inlineHelpText>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>