force-app/main/default/objects/Attribute__c/fields/Repeatable__c.field-meta.xml
<CustomField>
    <fullName>Repeatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates whether or not this Attribute can be repeated.</description>
    <inlineHelpText>Select this box if the attribute can be repeated.</inlineHelpText>
    <label>Repeatable</label>
    <type>Checkbox</type>
</CustomField>