force-app/main/default/objects/Attribute__c/fields/RepeatCount__c.field-meta.xml
<CustomField>
    <fullName>RepeatCount__c</fullName>
    <description>A field with a value that determines whether or not the Attribute is a repeatable. 0 indicates that it is a non-repeatable Attribute. A number higher than 0 determines the recurring number.</description>
    <inlineHelpText>Enter the number of times that this attribute can be repeated.</inlineHelpText>
    <label>Repeat Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>