force-app/main/default/objects/Attribute__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates whether or not this Attribute is required.</description>
    <inlineHelpText>Select this box if the attribute is required.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>