force-app/main/default/objects/Attribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>AttributeMaxLength__c</columns>
    <columns>AttributeType__c</columns>
    <columns>Description__c</columns>
    <columns>RepeatCount__c</columns>
    <columns>Repeatable__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>